Prova stampa singola email random

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Vue Email List</title>
 </head>
 <body>
-    <ul id="myApp">
-        
+    <ul id="myApp">{{ title }}
+        <li>{{emails}}</li>
     </ul>
     
     <script type="text/javascript" src="js/main.js"></script>
